# ai-dev-tool-zoomcamp

./: .gitignore  README.md
snake-duel/: AGENTS.md  Dockerfile  Makefile  docker-compose.deploy.yml  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml
snake-duel/backend/: Dockerfile  README.md  main.py  pyproject.toml  snake.db
snake-duel/backend/app/: database.py  db.py  main.py  models.py
snake-duel/backend/app/routers/: auth.py  games.py  leaderboard.py
snake-duel/backend/tests/: test_api.py  test_integration.py
snake-duel/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
snake-duel/frontend/src/__tests__/: api.test.ts
snake-duel/frontend/src/api/: index.ts
snake-duel/frontend/src/client/: index.ts
snake-duel/frontend/src/client/models/: ActivePlayer.ts  ApiResponse.ts  Direction.ts  GameMode.ts  GameStatus.ts  LeaderboardEntry.ts  Position.ts  User.ts
snake-duel/frontend/src/client/services/: AuthService.ts  GameService.ts  LeaderboardService.ts
snake-duel/frontend/src/test/: setup.ts
week_1/todo_project/todo_project/: settings.py  urls.py
week_1/todo_project/todos/: models.py  tests.py  urls.py  views.py
week_1/todo_project/todos/migrations/: 0001_initial.py
week_1/todo_project/todos/templates/todos/: base.html  todo_confirm_delete.html  todo_form.html  todo_list.html
week_1/workshop/claude-code/my-react-app/: package-lock.json
week_2/: package-lock.json
week_3/: .mcp.json  indexer.py  main.py  pyproject.toml  test.py  webpage_to_markdown.py
(+3 files in other folders)
